fix views to use relationship correctly

--- a/app/views/admin/activities/_recipe_form.html.haml
+++ b/app/views/admin/activities/_recipe_form.html.haml
@@ -3,7 +3,7 @@
 
   row_id = 'recipe-row' if is_template
 
-  recipe_id = is_template ? nil : recipe.id
+  recipe_id = is_template ? nil : recipe.recipe_id
 
 %tr{id: row_id}
   %td
