--- a/app/views/activities/_step_by_step.html.haml
+++ b/app/views/activities/_step_by_step.html.haml
@@ -1,6 +1,6 @@
 .hero-unit.hero-well.hero-step-by-step
   .container.step-by-step
-    - activity.recipes.each do |recipe|
+    - activity.ordered_recipes.each do |recipe|
       - if recipe.steps.any?
         .row
           .span12
