--- a/app/views/styleguide/index.html.haml
+++ b/app/views/styleguide/index.html.haml
@@ -2,7 +2,11 @@
 
 .container
   %h3 Delve Styleguide
-  %h5 This is where our basic styles are shown
+  %h5
+    This is where our basic styles are shown.
+    You can use either
+    %a{ href: 'http://daringfireball.net/projects/markdown/syntax' } markdown
+    or straight HTML for all fields labeled with "(Markdown or HTML)."
   .row
     .span12
       %h2 Headers
