only show "cooked this" count if > 0

--- a/app/views/activities/_overview.html.haml
+++ b/app/views/activities/_overview.html.haml
@@ -18,11 +18,12 @@
         -# .row
         -#   .span4
         -#     .horizontal-divider
-        .row
-          .span4.cooked-this-count
-            %i.icon-pot-brick
-            %span#cooked-count= activity.cooked_this
-            %span.verbage Cooked This
+        - if activity.cooked_this > 0
+          .row
+            .span4.cooked-this-count
+              %i.icon-pot-brick
+              %span#cooked-count= activity.cooked_this
+              %span.verbage Cooked This
       .span12
         .horizontal-divider
     .row
