--- a/app/views/activities/_step_by_step.html.haml
+++ b/app/views/activities/_step_by_step.html.haml
@@ -19,13 +19,14 @@
         .row
           .span12
             .horizontal-divider
-    .row
-      .span12
-        - if @cooked_this
-          %h4== #{pluralize(activity.cooked_this, 'person')} cooked this, including you. Comment below to tell us how it went!
-        - else
-          %a.button.cooked-this{ href: cooked_this_activity_path, data: { remote: true, method: :post } }
-            .inner
-              %i.icon-pot-white
-              %span I cooked this!
+    - if activity.has_recipes?
+      .row
+        .span12
+          - if @cooked_this
+            %h4== #{pluralize(activity.cooked_this, 'person')} cooked this, including you. Comment below to tell us how it went!
+          - else
+            %a.button.cooked-this{ href: cooked_this_activity_path, data: { remote: true, method: :post } }
+              .inner
+                %i.icon-pot-white
+                %span I cooked this!
 
