--- a/app/assets/stylesheets/_bootstrap_config.scss
+++ b/app/assets/stylesheets/_bootstrap_config.scss
@@ -13,6 +13,7 @@ $black:                 #000;
 $grayDarker:            #222;
 $grayDark:              #333;
 $gray:                  #666666;
+$grayMedium:            #C6C6C6;
 $grayLight:             #EAEAEA;
 $grayLighter:           #F8F8F8;
 $white:                 #fff;
