--- a/app/assets/stylesheets/application/_fonts.css.sass
+++ b/app/assets/stylesheets/application/_fonts.css.sass
@@ -14,6 +14,10 @@
   font-family: $sansFontFamily
   font-size: 20px
 
+=font-serif-tiny
+  font-family: $serifFontFamily
+  font-size: 12px
+
 =font-serif-small
   font-family: $serifFontFamily
   font-size: 14px
