add show_auth flag to nav to suppress auth links
For example, we probably won't want the auth links to show up
when viewing the global nav from the blog (at least not until
we have SSO).

--- a/app/views/layouts/_global_navigation.html.haml
+++ b/app/views/layouts/_global_navigation.html.haml
@@ -18,15 +18,16 @@
     Blog
     %i.icon-chevron-right.pull-right
 
-%li.authentication.first
-  = link_to '#' do
-    Log in
-    %i.icon-chevron-right.pull-right
+- if show_auth
+  %li.authentication.first
+    = link_to '#' do
+      Log in
+      %i.icon-chevron-right.pull-right
 
-%li.authentication
-  = link_to '#' do
-    Sign up
-    %i.icon-chevron-right.pull-right
-  %span
-    |
+  %li.authentication
+    = link_to '#' do
+      Sign up
+      %i.icon-chevron-right.pull-right
+    %span
+      |
 
