--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -125,7 +125,7 @@
     -# ==========================================================================
 
     #main-container
-      = render 'layouts/header', show_auth: true
+      = render 'layouts/header', show_auth: Rails.application.config.show_user_profiles
       = render 'layouts/title_bar'
       = yield
       = render 'layouts/footer'
