open markdown docs in new tab

--- a/app/views/styleguide/index.html.haml
+++ b/app/views/styleguide/index.html.haml
@@ -5,7 +5,7 @@
   %h5
     This is where our basic styles are shown.
     You can use either
-    %a{ href: 'http://daringfireball.net/projects/markdown/syntax' } markdown
+    %a{ href: 'http://daringfireball.net/projects/markdown/syntax', target: '_blank' } markdown
     or straight HTML for all fields labeled with "(Markdown or HTML)."
   .row
     .span12
