--- a/app/views/layouts/_global_navigation.html.haml
+++ b/app/views/layouts/_global_navigation.html.haml
@@ -25,7 +25,7 @@
       %i.icon-chevron-right.pull-right
 
   %li.authentication
-    = link_to '#' do
+    = link_to new_user_registration_path do
       Sign up
       %i.icon-chevron-right.pull-right
     %span
