--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,6 +1,10 @@
-%h2 Sign up
+%h1 Sign up
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
   = devise_error_messages!
+  %div
+    = f.label :name
+    %br/
+    = f.text_field :name
   %div
     = f.label :email
     %br/
@@ -13,5 +17,4 @@
     = f.label :password_confirmation
     %br/
     = f.password_field :password_confirmation
-  %div= f.submit "Sign up"
-= render "devise/shared/links"
+  %div= f.submit "Log in"
