--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -14,7 +14,7 @@
     %br/
     = f.password_field :password
   %div
-    = f.label :password_confirmation
+    = f.label :password_confirmation, 'Confirm Password'
     %br/
     = f.password_field :password_confirmation
   %div= f.submit "Log in"
