--- a/app/views/layouts/_global_navigation.html.haml
+++ b/app/views/layouts/_global_navigation.html.haml
@@ -19,15 +19,4 @@
     %i.icon-chevron-right.pull-right
 
 - if show_auth
-  %li.authentication.first
-    = link_to '#' do
-      Log in
-      %i.icon-chevron-right.pull-right
-
-  %li.authentication
-    = link_to new_user_registration_path do
-      Sign up
-      %i.icon-chevron-right.pull-right
-    %span
-      |
-
+  = render 'layouts/authentication'
