add simple sign out
The style/interaction doesn't match the design, but we need a simple
way to test log out. This will be updated in another story.

--- a/app/views/layouts/_authentication.html.haml
+++ b/app/views/layouts/_authentication.html.haml
@@ -1,12 +1,19 @@
-%li.authentication.first
-  = link_to '#' do
-    Log in
-    %i.icon-chevron-right.pull-right
+- if user_signed_in?
+  %li.authentication.first
+    = link_to destroy_user_session_path, method: :delete do
+      Log out
+      %i.icon-chevron-right.pull-right
 
-%li.authentication
-  = link_to new_user_registration_path do
-    Sign up
-    %i.icon-chevron-right.pull-right
-  %span
-    |
+- else
+  %li.authentication.first
+    = link_to '#' do
+      Log in
+      %i.icon-chevron-right.pull-right
+
+  %li.authentication
+    = link_to new_user_registration_path do
+      Sign up
+      %i.icon-chevron-right.pull-right
+    %span
+      |
 
