add basic login
again, not the final flow, but good enough for now

--- a/app/views/layouts/_authentication.html.haml
+++ b/app/views/layouts/_authentication.html.haml
@@ -6,7 +6,7 @@
 
 - else
   %li.authentication.first
-    = link_to '#' do
+    = link_to new_user_session_path do
       Log in
       %i.icon-chevron-right.pull-right
 
