wip: style registration form
still need to style button

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -19,6 +19,8 @@
 @import application/activities/overview
 @import application/activities/step_by_step
 
+@import application/users/forms
+
 @import twitter/bootstrap/responsive
 @import application/media_queries
 
