--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,18 +1,9 @@
 #sign-up.user-form
   %h1 Connect to sign up (or #{link_to 'log in', new_user_session_path})
-  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-    = devise_error_messages!
-    = field_set_tag 'Create a new account:' do
-      %div
-        = f.label :name, 'Name:'
-        = f.text_field :name
-      %div
-        = f.label :email, 'Email:'
-        = f.email_field :email
-      %div
-        = f.label :password, 'Password:'
-        = f.password_field :password
-      %div
-        = f.label :password_confirmation, 'Confirm Password:'
-        = f.password_field :password_confirmation
+  = semantic_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+    = f.inputs 'Create a new account:' do
+      = f.input :name, label: 'Name:'
+      = f.input :email, label: 'Email:'
+      = f.input :password, label: 'Password:'
+      = f.input :password_confirmation, label: 'Confirm Password:'
     %div= f.submit "Log in"
