match capitalization in comp

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -6,4 +6,4 @@
       = f.input :email, label: 'Email:'
       = f.input :password, label: 'Password:'
       = f.input :password_confirmation, label: 'Confirm Password:'
-    %div= f.submit "Log in"
+    %div= f.submit "Log In"
