--- a/app/views/admin/recipes/associated_ingredients.html.haml
+++ b/app/views/admin/recipes/associated_ingredients.html.haml
@@ -11,4 +11,5 @@
 
   = f.actions do
     = f.action :submit
-    = f.action :cancel, wrapper_html: {class: :cancel}, label: 'Cancel'
+    = f.action :cancel, wrapper_html: {class: :cancel}, label: 'Cancel
+
