update template hiding selector

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -42,7 +42,7 @@ body.admin_namespace
     padding: 0 1.4em
 
     // hide template row
-    tr:nth-child(2)
+    tr.template-row:nth-child(2)
       display: none
 
   ul.typeahead
