--- a/app/views/admin/recipes/_step_form.html.haml
+++ b/app/views/admin/recipes/_step_form.html.haml
@@ -2,13 +2,16 @@
   is_template = step.nil?
 
   row_id = 'step-row' if is_template
-  title = step.title unless is_template
-  id = step.id unless is_template
-  directions = step.directions unless is_template
-  image_id = step.image_id unless is_template
-  youtube_id = step.youtube_id unless is_template
 
-%tr{id: row_id}
+  unless is_template
+    title = step.title
+    id = step.id 
+    directions = step.directions
+    image_id = step.image_id
+    youtube_id = step.youtube_id
+  end
+
+%tr{id: row_id, class: ('template-row' if is_template )}
   %td
     = text_field_tag 'recipe[steps][][title]', title
     = hidden_field_tag 'recipe[steps][][id]', id
