--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,5 +1,5 @@
 #sign-up.user-form
-  %h1 Connect to sign up (or #{link_to 'log in', new_user_session_path})
+  %h1 Connect to sign up (or #{link_to 'log in', '#log-in'})
   = semantic_form_for(@user,
                       as: :user,
                       url: registration_path('user'),
