make auth forms responsive

--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -87,6 +87,16 @@
   .subscribe.orange button
     height: 30px
 
+  #auth-modal
+    top: 10%
+    .user-form
+      max-width: inherit
+    h1
+      font-size: 26px
+    input
+      width: 217px
+
+
 @media (max-width: 480px)
   /* ##################### */
   /* $SMARTHPHONE-CAROUSEL */
@@ -147,6 +157,10 @@
 
   .brand-container
     margin-bottom: 20px !important
+
+  #auth-modal
+    input
+      width: 157px
 
 /* Everything but portrait iphone*/
 @media (min-width: 480px)
