dont use default order for recipe_steps

--- a/app/views/admin/activities/_show.html.haml
+++ b/app/views/admin/activities/_show.html.haml
@@ -53,7 +53,7 @@
             %th Ordered Recipe Steps
             %td
               %ol
-                - activity.recipe_steps.each do |recipe_step|
+                - activity.ordered_recipe_steps.each do |recipe_step|
                   %li= recipe_step.sorting_title
 
 
