--- a/app/views/admin/recipes/_show.html.haml
+++ b/app/views/admin/recipes/_show.html.haml
@@ -20,7 +20,7 @@
               %ul
                 - recipe.ingredients.each do |ingredient|
                   %li
-                    = ingredient.display_quantity
+                    = ingredient.measurement
                     = link_to ingredient.title, admin_ingredient_path(ingredient.ingredient_id)
           %tr
             %th Steps
