--- a/app/assets/stylesheets/application/users/_forms.css.sass
+++ b/app/assets/stylesheets/application/users/_forms.css.sass
@@ -31,7 +31,7 @@
     text-align: right
     letter-spacing: 1px
     display: inline-block
-    color: #AAAAAA
+    color: $gray
     width: 100px
     white-space: normal
     text-shadow: none
@@ -70,6 +70,21 @@
       text-align: center
       line-height: 18px
 
+  .terms-of-service
+    padding-left: 160px
+    margin-top: 15px
+    input
+      margin: 0
+      width: 15px
+      height: 15px
+    label
+      +font-sans-medium
+      text-align: left
+      margin: 0
+      width: 250px
+
 #auth-modal
   +border-radius(16px)
   border: 10px solid $grayDarker
+
+
