--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -6,7 +6,11 @@
                       remote: true) do |f|
     = f.inputs 'Create a new account:' do
       = f.input :name, label: 'Name:'
-      = f.input :email, label: 'Email:', input_html: { required: true, type: 'email'}
+      = f.input :email, as: :email, label: 'Email:', required: true, input_html: { required: true }
       = f.input :password, label: 'Password:'
       = f.input :password_confirmation, label: 'Confirm Password:'
+    .terms-of-service
+      = check_box_tag 'terms', true, false, required: true
+      = label_tag 'terms', 'I accept the Terms of Service'
     = f.submit "Sign Up", disable_with: 'Submitting&hellip;'.html_safe
+
