prevent signup submition unless terms are accepted

--- a/app/assets/stylesheets/application/users/_forms.css.sass
+++ b/app/assets/stylesheets/application/users/_forms.css.sass
@@ -53,10 +53,13 @@
     margin: 20px 0 0 160px
     background: $brick
     border: none
-    color: white
+    color: $white
     height: 37px
     width: 268px
     line-height: 37px
+    &:disabled
+      background: $brickDark
+      color: $grayLight
 
   .input.error
     input
