--- a/app/views/activities/_ingredients_list.html.haml
+++ b/app/views/activities/_ingredients_list.html.haml
@@ -11,6 +11,6 @@
             = link_to ingredient.title, ingredient.product_url, { class: ('bullet-for-sale' if ingredient.for_sale) }
           - else
             = ingredient.title
-        %td.quantity= quantity_number(ingredient.quantity)
+        %td.quantity= ingredient.display_quantity
         %td= ingredient.unit
 
