--- a/app/views/admin/recipes/_ingredient_form.html.haml
+++ b/app/views/admin/recipes/_ingredient_form.html.haml
@@ -10,12 +10,12 @@
   }
 
   title = ingredient.title unless is_template
-  quantity = ingredient.quantity unless is_template
+  display_quantity = ingredient.display_quantity unless is_template
   unit = ingredient.unit unless is_template
 
 %tr{id: row_id}
   %td= text_field_tag "#{field_name_prefix}[title]", title, title_data_attrs
-  %td= text_field_tag "#{field_name_prefix}[quantity]", quantity
+  %td= text_field_tag "#{field_name_prefix}[display_quantity]", display_quantity
   %td
     = text_field_tag "#{field_name_prefix}[unit]", unit
     = remove_button 'tr'
