stop repeating the unless statement

--- a/app/views/admin/recipes/_ingredient_form.html.haml
+++ b/app/views/admin/recipes/_ingredient_form.html.haml
@@ -9,9 +9,11 @@
     autocomplete: 'off'
   }
 
-  title = ingredient.title unless is_template
-  display_quantity = ingredient.display_quantity unless is_template
-  unit = ingredient.unit unless is_template
+  unless is_template
+    title = ingredient.title
+    display_quantity = ingredient.display_quantity
+    unit = ingredient.unit
+  end
 
 %tr{id: row_id}
   %td= text_field_tag "#{field_name_prefix}[title]", title, title_data_attrs
