--- a/app/views/admin/recipes/_step_form.html.haml
+++ b/app/views/admin/recipes/_step_form.html.haml
@@ -2,6 +2,7 @@
   is_template = step.nil?
 
   row_id = 'step-row' if is_template
+  field_name_prefix ||= "recipe[steps][]"
 
   unless is_template
     title = step.title
@@ -13,11 +14,11 @@
 
 %tr{id: row_id, class: ('template-row' if is_template )}
   %td
-    = text_field_tag 'recipe[steps][][title]', title
-    = hidden_field_tag 'recipe[steps][][id]', id
-  %td= text_area_tag 'recipe[steps][][directions]', directions, rows: 5
-  %td= text_field_tag 'recipe[steps][][image_id]', image_id
+    = text_field_tag "#{field_name_prefix}[title]", title
+    = hidden_field_tag "#{field_name_prefix}[id]", id
+  %td= text_area_tag "#{field_name_prefix}[directions]", directions, rows: 5
+  %td= text_field_tag "#{field_name_prefix}[image_id]", image_id
   %td
-    = text_field_tag 'recipe[steps][][youtube_id]', youtube_id
+    = text_field_tag "#{field_name_prefix}[youtube_id]", youtube_id
     = remove_button 'tr'
     = reorder_icon
