add admin task to update ActivityRecipeSteps

--- a/app/views/admin/tasks/_task_list.html.haml
+++ b/app/views/admin/tasks/_task_list.html.haml
@@ -2,3 +2,8 @@
   = task_button 'Create display quantities', admin_tasks_create_display_quantities_path
   Copies the decimal value of quantity in StepIngredient and RecipeIngredient
   into the display_quantity field.
+
+%p
+  = task_button 'Update activity recipe steps', admin_tasks_update_activity_recipe_steps_path
+  Ensure that the ActivityRecipeStep models are setup for all steps associated with activities
+  via recipes.
