add forgot password modal and style the link

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -25,3 +25,4 @@
   #auth-modal.modal.hide.fade
     = render template: 'devise/sessions/new'
     = render template: 'devise/registrations/new'
+    = render template: 'devise/passwords/new'
