--- a/app/assets/stylesheets/application/users/_forms.css.sass
+++ b/app/assets/stylesheets/application/users/_forms.css.sass
@@ -86,6 +86,13 @@
       margin: 0
       width: 250px
 
+  .forgot-password
+    +font-sans-small
+    float: right
+    margin-right: 130px
+    margin-top: 5px
+
+
 #auth-modal
   +border-radius(16px)
   border: 10px solid $grayDarker
