add copy create task

--- a/app/views/admin/tasks/_task_list.html.haml
+++ b/app/views/admin/tasks/_task_list.html.haml
@@ -7,3 +7,7 @@
   = task_button 'Update activity recipe steps', admin_tasks_update_activity_recipe_steps_path
   Ensure that the ActivityRecipeStep models are setup for all steps associated with activities
   via recipes.
+
+%p
+  = task_button 'Create new copy entries', admin_tasks_create_new_copy_path
+  Non-destructively creates new copy entries from the copy.yml file.
