--- a/app/assets/stylesheets/application/users/_forms.css.sass
+++ b/app/assets/stylesheets/application/users/_forms.css.sass
@@ -96,5 +96,8 @@
 #auth-modal
   +border-radius(16px)
   border: 10px solid $grayDarker
-
+  .close
+    position: relative
+    top: 10px
+    right: 10px
 
