--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -23,6 +23,8 @@
 
 - unless user_signed_in?
   #auth-modal.modal.hide.fade
+    %button.close{ data: { dismiss: 'modal' } } X
     = render template: 'devise/sessions/new'
     = render template: 'devise/registrations/new'
     = render template: 'devise/passwords/new'
+
