--- a/app/views/devise/registrations/create.js.erb
+++ b/app/views/devise/registrations/create.js.erb
@@ -1,6 +1,6 @@
 <% errors = @user.errors.to_json.html_safe %>
 <% if @user.valid? %>
-  window.location = '<%= after_sign_in_path_for(@user) %>'
+  window.location = "<%= thank_you_path %>"
 <% else %>
   $('#sign-up form .error p').remove();
   $.each(JSON.parse('<%= errors %>'), function(field, errors) {
