--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -22,6 +22,7 @@
     width: 100%
     .quantity
       text-align: right
+      padding-right: 3px
   .well
     border: none
     background: $grayLight
