--- a/app/views/thank_you/show.html.haml
+++ b/app/views/thank_you/show.html.haml
@@ -5,6 +5,17 @@
     .row
       .span12
         %h3= "Thank You #{current_user.name}!"
-    .row
-      .span12
+
+.container
+  .row
+    .span12
+      :markdown
+        #{thank_you_intro.to_s}
+  .row
+    .span4
+      = render 'image_navigation', image: thank_you_image_left.to_s, caption: thank_you_image_left_caption.to_s
+    .span4
+      = render 'image_navigation', image: thank_you_image_middle.to_s, caption: thank_you_image_middle_caption.to_s
+    .span4
+      = render 'image_navigation', image: thank_you_image_right.to_s, caption: thank_you_image_right_caption.to_s
 
