start adding image captions

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -14,6 +14,7 @@
 @import application/subscribe
 @import application/home
 @import application/title_bar
+@import application/thank_you
 @import application/courses/show
 @import application/courses/course_breakdown
 @import application/activities/overview
