--- a/app/views/thank_you/show.html.haml
+++ b/app/views/thank_you/show.html.haml
@@ -13,9 +13,9 @@
         #{thank_you_intro.to_s}
   .row
     .span4
-      = render 'image_navigation', image: thank_you_image_left.to_s, caption: thank_you_image_left_caption.to_s
+      = render 'image_navigation', image: thank_you_image_left.to_s, caption: thank_you_image_left_caption.to_s, position: 'left'
     .span4
-      = render 'image_navigation', image: thank_you_image_middle.to_s, caption: thank_you_image_middle_caption.to_s
+      = render 'image_navigation', image: thank_you_image_middle.to_s, caption: thank_you_image_middle_caption.to_s, position: 'middle'
     .span4
-      = render 'image_navigation', image: thank_you_image_right.to_s, caption: thank_you_image_right_caption.to_s
+      = render 'image_navigation', image: thank_you_image_right.to_s, caption: thank_you_image_right_caption.to_s, position: 'right'
 
