make 'Preview More' link to first ordered activity

--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -6,7 +6,7 @@
       .span8
         %h3 Accelerated Sous Vide Cooking Course
       .span4
-        %a.button.pull-right{ href: activity_path(1) }
+        %a.button.pull-right{ href: activity_path(activities.first) }
           .inner
             Preview More
             %i.icon-double-chevron-right
