--- a/app/views/activities/_breadcrumbs.html.haml
+++ b/app/views/activities/_breadcrumbs.html.haml
@@ -4,5 +4,4 @@
       %li
         = link_to "Accelerated Sous Vide Cooking Course", course_path(1)
         %i.icon-chevron-right
-      %li.active
-        Module 7: Putting it All Together
+      %li.active!= activity.title
