add task to set all existing activities published

--- a/app/views/admin/tasks/_task_list.html.haml
+++ b/app/views/admin/tasks/_task_list.html.haml
@@ -11,3 +11,6 @@
 %p
   = task_button 'Create new copy entries', admin_tasks_create_new_copy_path
   Non-destructively creates new copy entries from the copy.yml file.
+
+%p
+  = task_button 'Publish all activities', admin_tasks_publish_all_activities_path
