allow editing of published on admin side

--- a/app/views/admin/activities/_show.html.haml
+++ b/app/views/admin/activities/_show.html.haml
@@ -5,6 +5,9 @@
       %table
         %tbody
           %tr
+            %th Published
+            %td= activity.published
+          %tr
             %th Title
             %td= activity.title
           %tr
