--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -3,6 +3,7 @@
 
 = semantic_form_for [:admin, @activity] do |f|
   = f.inputs name: "Activity Details" do
+    = f.input :published
     = f.input :title
     = f.input :description, label: "Description (Markdown or HTML)"
     = f.input :youtube_id
